added first round methods to view controller